erDiagram
    %% Auth & User Management
    auth_users ||--|| PROFILES : "1:1 mapping via trigger"
    
    PROFILES {
        uuid id PK "References auth.users"
        text email "UNIQUE"
        text full_name
        text avatar_url
        enum role "super_admin, admin, event_admin, finance_admin, content_admin, moderator, participant"
        timestamp created_at
    }

    %% Core Entities
    PROFILES ||--o{ EVENTS : "created_by"
    EVENTS {
        uuid id PK
        text title
        text description
        timestamp date
        timestamp end_date
        timestamp registration_start
        timestamp registration_end
        timestamp payment_deadline
        text location
        text banner_url
        int max_capacity
        boolean requires_approval
        boolean is_published
        enum status "draft, pending_approval, published, rejected, completed, cancelled"
        text event_type "General, etc."
        decimal fees
        jsonb coordinators
        jsonb attendance_sessions
        uuid created_by FK
    }

    %% Registrations and Payments
    PROFILES ||--o{ REGISTRATIONS : "user_id"
    EVENTS ||--o{ REGISTRATIONS : "event_id"
    PROFILES ||--o{ REGISTRATIONS : "approved_by"
    
    REGISTRATIONS {
        uuid id PK
        uuid user_id FK
        uuid event_id FK
        enum status "pending_approval, approved, rejected, cancelled, expired"
        uuid ticket_qr_uuid
        text guest_name
        text guest_reg_no
        jsonb team_members
        uuid approved_by FK
        timestamp approved_at
    }

    REGISTRATIONS ||--o{ PAYMENTS : "registration_id"
    PROFILES ||--o{ PAYMENTS : "verified_by"

    PAYMENTS {
        uuid id PK
        uuid registration_id FK
        decimal amount
        text currency
        text transaction_reference
        text proof_url
        text receipt_url
        enum status "unpaid, pending_verification, verified, rejected, refunded"
        uuid verified_by FK
        text rejection_reason
    }

    %% Attendance
    REGISTRATIONS ||--|{ ATTENDANCE : "registration_id"
    EVENTS ||--o{ ATTENDANCE : "event_id"
    PROFILES ||--o{ ATTENDANCE : "scanned_by"
    
    ATTENDANCE {
        uuid id PK
        uuid registration_id FK "UNIQUE"
        uuid event_id FK
        uuid scanned_by FK
        text session_name
        timestamp check_in_time
        timestamp check_out_time
    }

    %% Certificates
    EVENTS ||--o{ CERTIFICATE_TEMPLATES : "event_id"
    
    CERTIFICATE_TEMPLATES {
        uuid id PK
        uuid event_id FK
        text name
        text background_url
        jsonb layout_config
        boolean is_locked
    }

    CERTIFICATE_TEMPLATES ||--o{ CERTIFICATES : "template_id"
    REGISTRATIONS ||--o{ CERTIFICATES : "registration_id"

    CERTIFICATES {
        uuid id PK
        uuid registration_id FK
        uuid template_id FK
        text unique_code "UNIQUE"
        text file_url
        timestamp issued_at
    }

    %% Audit and Approvals
    PROFILES ||--o{ AUDIT_LOGS : "actor_id"
    
    AUDIT_LOGS {
        uuid id PK
        uuid actor_id FK
        text action
        text entity_type
        uuid entity_id
        jsonb old_values
        jsonb new_values
        text ip_address
        text user_agent
    }

    PROFILES ||--o{ APPROVAL_REQUESTS : "requester_id"
    PROFILES ||--o{ APPROVAL_REQUESTS : "approver_id"

    APPROVAL_REQUESTS {
        uuid id PK
        uuid requester_id FK
        uuid approver_id FK
        enum action_type "PUBLISH_EVENT, LOCK_TEMPLATE, GENERATE_CERTIFICATES, FINALIZE_ATTENDANCE, EXTEND_DEADLINE, DELETE_DATA"
        text entity_table
        uuid entity_id
        jsonb new_data
        enum status "pending, approved, rejected"
        text rejection_reason
    }
